test: suite de 9 pruebas unitarias reactivas ejecutada con exito (Fase 7)