@@ -6,7 +6,7 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -15,20 +15,31 @@ public class DataSeeder {
     @Bean
     CommandLineRunner initDatabase(ProductoRepository repository) {
         return args -> {
-            if (repository.count() == 0) {
-                String cat = "Flores";
+            // Limpia los datos corruptos anteriores para forzar la recarga
+            repository.deleteAll();
 
-                // 3 Productos válidos para la categoría Flores
-                ProductoEntity p1 = new ProductoEntity(null, "Rosas Rojas Exportación", new BigDecimal("12.50"), 500, cat, "ventas@flores.ec, export@flores.ec");
-                ProductoEntity p2 = new ProductoEntity(null, "Girasoles Cayambe", new BigDecimal("8.00"), 300, cat, "contacto@flores.ec");
-                ProductoEntity p3 = new ProductoEntity(null, "Orquídeas Mindo Premium", new BigDecimal("22.00"), 120, cat, "info@flores.ec");
+            String cat = "Flores";
 
-                // 2 Productos inválidos (1 con precio cero, 1 sin correos)
-                ProductoEntity p4 = new ProductoEntity(null, "Muestra Ramo Pruebas", BigDecimal.ZERO, 50, cat, "muestra@flores.ec");
-                ProductoEntity p5 = new ProductoEntity(null, "Flores Reserva Sin Notif", new BigDecimal("15.00"), 80, cat, "");
+            // 3 Productos válidos para la categoría Flores
+            ProductoEntity p1 = crearProducto("Rosas Rojas Exportación", cat, 12.50, 500, List.of("ventas@flores.ec", "export@flores.ec"));
+            ProductoEntity p2 = crearProducto("Girasoles Cayambe", cat, 8.00, 300, List.of("contacto@flores.ec"));
+            ProductoEntity p3 = crearProducto("Orquídeas Mindo Premium", cat, 22.00, 120, List.of("info@flores.ec"));
 
-                repository.saveAll(List.of(p1, p2, p3, p4, p5));
-            }
+            // 2 Productos inválidos
+            ProductoEntity p4 = crearProducto("Muestra Ramo Pruebas", cat, 0.0, 50, List.of("muestra@flores.ec"));
+            ProductoEntity p5 = crearProducto("Flores Reserva Sin Notif", cat, 15.00, 80, Collections.emptyList());
+
+            repository.saveAll(List.of(p1, p2, p3, p4, p5));
         };
+    }
+
+    private ProductoEntity crearProducto(String nombre, String categoria, Double precio, Integer stockKg, List<String> correos) {
+        ProductoEntity p = new ProductoEntity();
+        p.setNombre(nombre);
+        p.setCategoria(categoria);
+        p.setPrecio(precio);
+        p.setStockKg(stockKg);
+        p.setCorreosNotificacion(correos);
+        return p;
     }
 }
